log/build_2026-03-07_11-28-00/seano_communication/stderr.log
  File "/home/seano/Seano_ws/install/seano_communication/lib/python3.10/site-packages/seano_communication/communication_node.py", line 107
    socket.getaddrinfo = custom_getaddrinf, bandwidth and switch if necessary.
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression

